2007-08-07  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.c:
	Added new -e option to edit scripts in-place.
	* export.c:
	Added new -D option to set deleted status on messages.
	* main.c, user.c:
	Cleaned up the help text a little bit.
	* modules/sortsieve.c:
	Accepted modified version of patch for bug #632.

2007-07-28  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, maintenance.c:
	add missing integrity check (bug #305)
	* serverchild.c:
	fix trivial compiler warning

2007-07-22  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	update client state after authentication
	* serverchild.c:
	final selfpipe mod
	* pool.c:
	retry locking before logging an error
	* ChangeLog, dbmail-imapsession.c, dbmail-imapsession.h, imap4.c:
	login_/timeout cleanup
	* dbmail.h.in:
	GETCONFIGVALUE trimmed
	* serverchild.c:
	selfPipe modification
	* dbmail-imapsession.c, dbmail-imapsession.h:
	speedup fetch by buffering output

2007-07-21  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.c:
	login_/timeout cleanup
	* dbmail.h.in:
	GETCONFIGVALUE trimmed
	* serverchild.c:
	selfPipe modification

2007-07-16  Aaron Stone  <aaron@serendipity.cx>

	* export.c, man/dbmail-export.txt:
	Require the -u argument, add support for wildcards.

2007-07-15  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c:
	use sigaction instead of signal in ldap code

2007-07-12  Aaron Stone  <aaron@serendipity.cx>

	* export.c, man/dbmail-export.txt:
	New options: -b basedir, -r recursive.
	* dbmail-mailbox.c:
	Tell GMime that it does not own the dbmail_mailbox_dump file pointer.
	* contrib/dbmail-removeversion.patch contrib/expirebox.sh:
	Removed obsolete patch (see banner option in dbmail.conf) and obsolete
	mail expiry script (see dbmail-export -s, -m, -d options).

2007-07-09  Paul Stevens <paul@nfg.nl>

	* ChangeLog, config.c, dbmailtypes.h, dbmodule.c, modules/dbmysql.c, 
	modules/dbpgsql.c, modules/dbsqlite.c: